--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,14 +1,84 @@
+body {
+  margin: auto;
+  padding: 70px 0;
+  background: rgb(73, 129, 224);
+  color: white;
+  font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+  line-height: 25px;
+  font-size: 13px;
+}
+
+h1 {
+padding: 30px;
+font-family: 'Corben', Georgia, Time, serif;
+line-height: 60px;
+}
+
+.block {
+  margin: 10px;
+  padding: 10px;
+  height: 150px;
+  width: 150px;
+  background: yellow;
+  border: 3px solid black;
+  border-radius: 10px;
+  box-shadow: inset -5px -5px 1px #d6a12d;
+  color: black;
+  overflow: hidden;
+  text-align: center;
+}
+
+.btn {
+  margin: 10px;
+  background-color: green;
+  border: white;
+}
+
+.btn:hover {
+  background: rgba(0,0,0,0);
+	color: white;
+	box-shadow: inset 0 0 0 3px white;
+}
+
 .code {
   font-size: 50px;
-  padding-left: 70px;
 }
 
 .failure {
-  color: #d9534f;
+  color: white;
+  margin: 10px;
+  padding: 10px;
+  height: 150px;
+  width: 150px;
+  background: #d9534f;
+  border: 3px solid black;
+  border-radius: 10px;
+  box-shadow: inset -5px -5px 1px #d6a12d;
+  color: black;
+  overflow: hidden;
+  text-align: center;
 }
 
 .success {
-  color: #5cb85c;
+  color: white;
+  margin: 10px;
+  padding: 10px;
+  height: 150px;
+  width: 150px;
+  background: #5cb85c;
+  border: 3px solid black;
+  border-radius: 10px;
+  box-shadow: inset -5px -5px 1px #d6a12d;
+  color: black;
+  overflow: hidden;
+  text-align: center;
+}
+
+#results{
+  padding: 10px;
+  border: 1px solid white;
+  background: white;
+  color: black;
 }
 
 .form-inline {
@@ -17,4 +87,11 @@
 
 .message {
   font-weight: bold;
+  margin: 20px;
+}
+
+.rules {
+  padding: 10px;
+  margin-top: 10px;
+  border-left: 100px solid rgb(73, 129, 224);
 }
